--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -19,6 +19,7 @@ tauri-build = { version = "2", features = [] }
 
 [dependencies]
 chrono = { version = "0.4", features = ["serde"] }
+dirs = "5"
 reqwest = { version = "0.12", features = ["json", "stream"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
@@ -28,5 +29,7 @@ sqlx = { version = "0.8", features = [
     "chrono",
 ] }
 tauri = { version = "2", features = [] }
+tauri-plugin-fs = { version = "2.0.0", features = ["watch"] }
 tauri-plugin-opener = "2"
+tauri-plugin-shell = "2"
 tokio = { version = "1", features = ["full"] }
