--- a/pkgs/api/deno.json
+++ b/pkgs/api/deno.json
@@ -1,8 +1,11 @@
 {
   "name": "@harbor/kv",
   "version": "1.0.0",
-  "exports": "./mod.ts",
   "license": "MIT",
+  "exports": {
+    "./mode": "./mode/mod.ts",
+    "./input": "./input/mod.ts"
+  },
   "imports": {
     "@harbor/kv": "jsr:@harbor/kv@^0.1.0",
     "@tauri-apps/api": "npm:@tauri-apps/api@^2.8.0",
