--- a/deno.json
+++ b/deno.json
@@ -5,9 +5,13 @@
     "dev": "vite dev",
     "build": "vite build",
     "preview": "vite preview",
+    "tauri": "tauri",
+
+    "test": "vitest",
+    "coverage": "vitest run --coverage",
+
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-    "tauri": "tauri"
+    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
   },
   "fmt": {
     "lineWidth": 120
@@ -40,6 +44,11 @@
     "@tauri-apps/cli": "npm:@tauri-apps/cli@^2.8.1",
     "@tauri-apps/plugin-fs": "npm:@tauri-apps/plugin-fs@^2.4.2",
     "@tauri-apps/plugin-opener": "npm:@tauri-apps/plugin-opener@^2.5.0",
+    "@testing-library/jest-dom": "npm:@testing-library/jest-dom@^6.8.0",
+    "@testing-library/svelte": "npm:@testing-library/svelte@^5.2.8",
+    "@testing-library/user-event": "npm:@testing-library/user-event@^14.6.1",
+    "@vitest/coverage-v8": "npm:@vitest/coverage-v8@3.2.4",
+    "jsdom": "npm:jsdom@^26.1.0",
     "smol-toml": "npm:smol-toml@^1.4.2",
     "svelte": "npm:svelte@^5.38.2",
     "svelte-check": "npm:svelte-check@^4.3.1",
@@ -49,6 +58,7 @@
     "tailwindcss": "npm:tailwindcss@^4.1.12",
     "typescript": "npm:typescript@^5.9.2",
     "vite": "npm:vite@^7.1.3",
+    "vitest": "npm:vitest@^3.2.4",
     "zod": "npm:zod@^4.0.17"
   }
 }
